<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  tools:context=".Activitys.Society_FlatActivity"
    >
    <item
        android:id="@+id/action_Owner_details"
        android:orderInCategory="100"
        android:title="@string/action_Owner_details"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/ic_person"
        />
    <item
        android:id="@+id/action_owner_moredetails"
        android:orderInCategory="100"
        android:title="@string/action_owner_moredetails"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_attach"


        />
    <item
        android:id="@+id/action_coOwner_moredetails"
        android:orderInCategory="100"
        android:title="@string/action_coOwner_moredetails"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_co_owner"
        />

</menu>
